<resources>
    <string name="app_name">Diploma</string>
    <string name="tools">Tools</string>
    <string name="header_title">My header title</string>
    <string name="purchase_title">Покупки</string>
    <string name="category_title">Категории</string>
    <string name="analysis_title">Анализ</string>
    <string name="setting_title">Настройки</string>
    <string name="info_title">Информация</string>
    <string name="app_info_title">О приложении</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Домашняя страница</string>
    <string name="setting">Настройки</string>
    <string name="info">Информация</string>
    <string name="analysis">Анализ</string>
    <string name="category">Категории</string>
    <string name="items">Товары:</string>
    <string name="list_items">Товары</string>
    <string name="place_name">Название Магазина</string>
    <string name="sum">Сумма</string>
    <string name="price">Итого: </string>
    <string name="quantity">Количество</string>
    <string name="item_price">Цена</string>
    <string name="category_name_text">Категория</string>
    <string name="category_text_card">Категория</string>
    <string name="create_category">Constructor</string>
    <string name="name_category">Наименование</string>
    <string name="first_radio_text">Обязательные</string>
    <string name="second_radio_text">Необязательные</string>
    <string name="save_text">Сохранить</string>
    <string name="place_name_text">Название магазина</string>
    <string name="category_text">Категория товара:</string>
    <string name="addProduct">Добавить</string>
    <string name="products">Товары:</string>
    <string name="product_name">Название продукта</string>
    <string name="count_product">Количество:</string>
    <string name="cost_product">Цена за ед. товара:</string>
    <string name="product_total_sum">Итоговая сумма:</string>
    <string name="purchase_total_sum">Итого:</string>
    <string name="error_product_name">Требуется ввести название продукта</string>
    <string name="error_product_cost">Требуется ввести стоимость продукта</string>
    <string name="error_product_count">Требуется ввести количество продукта</string>
    <string name="with_sum_product">%.1f р.</string>
    <string name="error_place_name">Нужно заполнить все поля</string>
    <string name="error_reading_storage">Нет достпа к памяти смартфона</string>
    <string name="with_sum_and_quan">%.1f x %.1f</string>
    <string name="total">Итого:</string>
    <string name="currency_unit_rus">р.</string>
    <string name="date_purchase">Дата</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="pick_date">Выберете дату:</string>
    <string name="center_text">Нет данных</string>
    <string name="add_product">Добавление продукта</string>
    <string name="error_category">Нет категории, требуется создать новую категорию</string>
    <string name="cancel_deletion">Отменить удаление</string>
    <string name="cancel">Отменить</string>
    <string name="unknown">Неизвестно</string>
    <string name="purchase">Продукты</string>
    <string name="add_category">Добавление категории</string>
</resources>
