<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10sp"
    android:background="@color/compatibility_pressed_color"
    android:elevation="8dp"
    android:orientation="vertical"
    android:padding="10sp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/purchase_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:maxLines="2"
            android:text="@string/place_name"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/purchase_sum_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/sum"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/purchase_items_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:maxLines="6"
                android:text="@string/list_items"
                android:textColor="#555"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/purchase_items_quantity_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:maxLines="6"
                android:text="@string/quantity"
                android:textColor="#555"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/purchase_items_price_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:maxLines="6"
                android:text="@string/item_price"
                android:textColor="#555"
                android:textSize="15sp" />
        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>