<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/purchase_items_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:ellipsize="end"
            android:text="@string/list_items"
            android:textColor="#555"
            android:textSize="15sp"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/purchase_items_quantity_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/quantity"
            android:textColor="#555"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/purchase_items_price_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/item_price"
            android:textColor="#555"
            android:textSize="15sp" />
    </LinearLayout>
</android.support.v7.widget.CardView>