<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/content_frame_tool_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_category"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:titleTextColor="#FFFFFF"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:paddingStart="20dp"
            android:paddingTop="40dp"
            android:paddingEnd="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_name_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_category" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/quantity_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_radio_text" />

                <RadioButton
                    android:id="@+id/not_quantity_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_radio_text" />

            </RadioGroup>

            <Button
                android:id="@+id/save_category_button"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/save_text" />

        </android.support.design.widget.TextInputLayout>


    </android.support.design.widget.CoordinatorLayout>


</LinearLayout>