<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/create_product_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="#FFFFFF">


    </android.support.v7.widget.Toolbar>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingTop="?attr/actionBarSize">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="5dp"
                android:text="@string/category_text"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/product_category_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:padding="5dp"
                >

            </android.support.v7.widget.AppCompatSpinner>

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="5dp"
                android:text="@string/count_product"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/count_product"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:inputType="numberDecimal"
                android:padding="5dp" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="5dp"
                android:text="@string/cost_product"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cost_product"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:inputType="numberDecimal"
                android:padding="5dp" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="5dp"
                android:text="@string/product_total_sum"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/product_total_sum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="5dp"
                android:textSize="18sp" />
        </android.support.v7.widget.LinearLayoutCompat>


    </android.support.design.widget.TextInputLayout>

</android.support.design.widget.CoordinatorLayout>