<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/create_purchase_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="#FFFFFF">


    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/place_name"
                    style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:hint="@string/place_name_text" />

                <Button
                    android:id="@+id/date_button"
                    style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:drawableLeft="@drawable/ic_calendar" />

            </LinearLayout>


            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:text="@string/category_text"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:paddingLeft="12sp"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinnerCategory"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:textSize="18sp">


                </android.support.v7.widget.AppCompatSpinner>

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </android.support.v7.widget.LinearLayoutCompat>


            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:padding="5dp"
                    android:layout_marginLeft="10sp"
                    android:text="@string/products" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:padding="5dp"
                    android:text="@string/purchase_total_sum" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/purchase_total_sum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:padding="5dp" />
            </android.support.v7.widget.LinearLayoutCompat>


            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp">


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_purchase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </android.support.v7.widget.RecyclerView>


            </android.support.design.widget.CoordinatorLayout>


        </android.support.design.widget.TextInputLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/create_purchase_fab_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_check" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/create_purchase_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/fab_add" />
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>